// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile y huge 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  font-size: 35px;
  line-height: 35px;
}

.IS2 {
  margin-top: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "15px",
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS2 S3"
    >
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </span>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile y medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  font-size: 30px;
  line-height: 30px;
}

.IS2 {
  margin-top: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "15px",
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS2 S3"
    >
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </span>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile y wide 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  font-size: 30px;
  line-height: 30px;
}

.IS2 {
  margin-top: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "15px",
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS2 S3"
    >
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </span>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;

exports[`tile y without breakpoint should be like medium 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  font-size: 30px;
  line-height: 30px;
}

.IS2 {
  margin-top: 5px;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "15px",
      "paddingHorizontal": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <h3
      aria-level="3"
      className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontWeight-16dba41 r-marginBottom-d0pm55 IS1 S2"
      role="heading"
    >
      This is tile headline
    </h3>
    <div
      className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS2 S3"
    >
      <span
        className="css-text-901oao css-textHasAncestor-16my406"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </span>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </div>
</Link>
`;
